--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django==1.7
-django-postgrespool==0.3.0
 dj-database-url==0.3.0
 dj-static==0.0.6
-gunicorn==19.1.1
-psycopg2==2.5.1
-static==0.4
-wsgiref==0.1.2
+Django==1.8.3
+django-toolbelt==0.0.1
+gunicorn==19.3.0
+psycopg2==2.6.1
+static3==0.6.1
+wheel==0.24.0
